--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-serverless-egghead-jlengstorf",
+  "name": "form-validation-demo",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
