--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test:vitest": "vitest",
+    "test:jest": "jest --watch"
   },
   "dependencies": {
     "@netlify/functions": "^0.10.0",
@@ -13,9 +14,18 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.4.0",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "babel-jest": "^27.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vitest": "^0.2.7"
