--- a/package.json
+++ b/package.json
@@ -6,28 +6,30 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test:vitest": "vitest",
-    "test:jest": "jest --watch"
+    "test:jest": "jest --watch",
+    "test:vitest:ci": "vitest run",
+    "test:jest:ci": "jest"
   },
   "dependencies": {
     "@netlify/functions": "^0.10.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.4.0",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^2.2.0",
     "babel-jest": "^27.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.0",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vitest": "^0.2.7"
+    "vite": "^3.2.5",
+    "vitest": "^0.25.6"
   }
 }
